# fastdeps

./: .gitignore  ARCHITECTURE.md  Cargo.toml  THE_DREAM.md
src/: cache.rs  cargo.rs  contrastive.rs  db.rs  embed.rs  lib.rs  main.rs  mcp.rs  npm.rs  octo_index.rs  parse.rs  profile.rs  project.rs  schema.rs  search.rs  usage.rs
src/braid/: crossing.rs  fano.rs  mod.rs  word.rs
src/languages/: mod.rs  rust.rs  typescript.rs
