[package]
name = "fastdeps"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.2"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
camino = { version = "1", features = ["serde1"] }  # UTF-8 paths
thiserror = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
home = "0.5"  # Cross-platform home directory
rusqlite = { version = "0.34", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
rayon = "1.10"  # For CPU-bound parallel parsing
rmcp = { version = "0.10", features = ["server", "transport-io"] }
