[package]
name = "cratefind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
csv = "1"
dirs = "6"
fastembed = "5.8.0"
octonion = "0.1.1"
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
zstd = "0.13"

[[bin]]
name = "octo-sleeper"
path = "src/bin/octo_sleeper.rs"
